# antiYoyProject

./: .gitignore  Game.py  Game_Process.py  State_Geneneration.py  cat_files.sh  game.py  state_geneneration.py  test.ipynb
.devcontainer/: devcontainer.json
configs/: play_game.yaml
configs/game_state/: default.yaml
configs/player_strategy/: random.yaml
core/: CMakeLists.txt  README.md
core/configs/: training.yaml  visualization.yaml
core/include/: action_space.hpp  config.hpp  game_rules.hpp  game_state.hpp  hex_geometry.hpp  mcts.hpp  neural_net.hpp  replay_buffer.hpp  self_play.hpp  trainer.hpp  visualizer.hpp
core/src/: action_space.cpp  config.cpp  game_rules.cpp  game_state.cpp  hex_geometry.cpp  mcts.cpp  neural_net.cpp  replay_buffer.cpp  self_play.cpp  train_main.cpp  trainer.cpp  visualize_main.cpp  visualizer.cpp
docker_scripts/: Dockerfile  build.sh  environment.yml  launch_container.sh
engine/: coordinate_system_operations.py  game_dinamics.py  game_process.py  state_generation.py
engine/move_performer/: actions_before_and_after_players_move.py  actions_before_players_move.py  probability_normalization.py  spend_money.py  state_information.py  state_matrix_change_tools.py  unit_move.py
rl/: mcts.py
scripts/: play_game.py
training_pipeline/game_sampler/: self_play.py
